force-app/main/default/objects/DataRange__mdt/DataRange__mdt.object-meta.xml
<CustomObject>
    <label>Intervalo de dados</label>
    <pluralLabel>Intervalos de dados</pluralLabel>
</CustomObject>