force-app/main/default/objects/DataRange__mdt/fields/Entry__c.field-meta.xml
<CustomField>
    <fullName>Entry__c</fullName>
    <label>Entrada</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>