force-app/main/default/objects/DataRange__mdt/fields/Exit__c.field-meta.xml
<CustomField>
    <fullName>Exit__c</fullName>
    <label>Saída</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>