force-app/main/default/objects/DataRange__mdt/fields/Range__c.field-meta.xml
<CustomField>
    <fullName>Range__c</fullName>
    <label>Intervalo</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>