force-app/main/default/objects/DataRange__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <label>Valor</label>
    <length>80</length>
    <type>Text</type>
</CustomField>